--- a/css/styles.css
+++ b/css/styles.css
@@ -10,18 +10,29 @@ header {
 	width: 100%;
 	background-color: #fafafa;
 	display: flex;
-	flex-direction: column;
-	
-	/*float: left;*/
-	/*margin-bottom: 30px;*/
+	justify-content: space-between;
+	align-items: center;
 }
 .nav{
+	font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
+		font-size: 16px;
+		letter-spacing: 2pt;
 	display: flex;
 	list-style: none;
-	justify-content: space-between;
+	margin-right: 4.5%;
+	align-items: center;
+
+
 }
+
+.nav li {
+	margin-left: 3%;
+	margin-right: 40%;
+	
+}
+
 .text-presentation {
-	/*font-family: Helvetica Neue;*/
+	font-family: Helvetica Neue;
 	font-weight: 70;
 	font-size: 25px;
 	text-align: center;
@@ -38,27 +49,23 @@ header {
     font-style: normal;
     font-weight: 400;
 		line-height: 22px;
-		margin-top: 50px;
-		margin-left: 30px;
-		float: left;
+		margin-left: 2%;
 }
+
+.logo-page {
+	width:90px;
+	height:67px;
+	margin-left: -12%;
+}
+
+
+
 .menu {
 	font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
   font-size: 16px;
 	letter-spacing: 2pt;
-	
-
 }
-.logo-page {
-	/*width:90px;
-	height:67px;
-	margin-left: auto;
-	margin-right: auto;*/
-	margin-top: 30px;
-	padding-left:50px;
-	
 
-}
 
 .parrafo{
 	font-size: 20px;
@@ -83,15 +90,49 @@ header {
 	border-radius: 3px;
 	box-shadow: 0px 2px 5px #fafafa;
 	transition: all 0.17s;
+	background-image: url('../img/phytool.png');
+	background-size: cover;
+	position: relative;
 }
 
+.article-text {
+	display: none;
+}
+.article-text:hover {
+	position: absolute;
+	top: 5%;
+	left: 5%;
+	display: block;
+	z-index: 3;
+}
 .card-article:hover { 
 	transition: all 0.17s;
 	transform: scale(1.02);
-	background: wheat;
 	box-shadow: 0px 5px 10px rgba(107, 107, 107, 0.35);
-	cursor: grab
+	cursor: grab;
 }
+
+.card-article:hover > .article-text { 
+	position: absolute;
+	top: 5%;
+	left: 5%;
+	display: block;
+}
+
+.blur {
+	display: none;
+	/* background: aliceblue; */
+}
+
+
+.card-article:hover > .blur { 
+	width: 100%;
+	height: 100%;
+	display: block;
+	filter: blur( 5px);
+	background: red;
+}
+
 
 #footer { 
 	font-family: Helvetica Neue;
