--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body{
 	font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
 }
 header {
-	height: 150px;
+	height: 140px;
 	width: 100%;
 	background-color: #fafafa;
 	display: flex;
@@ -19,16 +19,24 @@ header {
 		letter-spacing: 2pt;
 	display: flex;
 	list-style: none;
-	margin-right: 4.5%;
+	/* margin-right: 4.5%; */
 	align-items: center;
+	margin-right: 45px;
 
 
 }
 
 .nav li {
-	margin-left: 3%;
-	margin-right: 40%;
+	/* margin-left: 3%; */
+
 	
+}
+
+#logo-linkedin {
+    width: 5px;
+    height: 5px;
+    margin-bottom: 21px;
+    
 }
 
 .text-presentation {
@@ -40,40 +48,40 @@ header {
 	line-height: 30px;
 	margin-top: -10px;
 	background: #fafafa;
-	padding-bottom: 20px;
+	padding-bottom: 35px;
 }
+
+
 .logo {
-	font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
-		font-size: 16px;
-		letter-spacing: 5pt;
+    font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    letter-spacing: 5pt;
     font-style: normal;
     font-weight: 400;
-		line-height: 22px;
-		margin-left: 2%;
+    line-height: 22px;
+    margin-left: 30px;
 }
 
 .logo-page {
-	width:90px;
-	height:67px;
-	margin-left: -12%;
+	left: calc(50% - 25px);
+	position: absolute;
+	margin-left: -20px;
 }
 
 
 
 .menu {
 	font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
-  font-size: 16px;
+    font-size: 16px;
 	letter-spacing: 2pt;
 }
 
 
 .parrafo{
+	text-align: center;
 	font-size: 20px;
 }
 
-.parrafo {
-	text-align: center;
-}
 
 #card-article-container{
 	display: flex;
@@ -98,6 +106,8 @@ header {
 .article-text {
 	display: none;
 }
+
+
 .article-text:hover {
 	position: absolute;
 	top: 5%;
@@ -105,32 +115,59 @@ header {
 	display: block;
 	z-index: 3;
 }
+
+
 .card-article:hover { 
 	transition: all 0.17s;
 	transform: scale(1.02);
 	box-shadow: 0px 5px 10px rgba(107, 107, 107, 0.35);
 	cursor: grab;
+	background:rgba(0,0,0,1);
+	opacity: 0.5;
 }
 
 .card-article:hover > .article-text { 
+
 	position: absolute;
-	top: 5%;
+	top: 8%;
 	left: 5%;
 	display: block;
+	color: white;
+	font-size: 18px;
+}
+.salto-texto {
+	margin-top: 50px;
 }
 
 .blur {
 	display: none;
-	/* background: aliceblue; */
+	position: relative;
 }
 
+.color-hover {
+	opacity: 0.5;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+
+
+
+.color-hover:hover {
+	opacity: 0.5;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	filter: blur( 5px);
+	
+}
 
 .card-article:hover > .blur { 
 	width: 100%;
 	height: 100%;
 	display: block;
-	filter: blur( 5px);
-	background: red;
+
+
 }
 
 
