--- a/css/info-styles.css
+++ b/css/info-styles.css
@@ -22,13 +22,12 @@ header {
 	margin-right: 25px;
     justify-content: flex-end;
     align-items: flex-end
-
 }
 
 .nav a{
-   text-decoration: none;
-   color: inherit;    
-}
+    text-decoration: none;
+    color: inherit;    
+ }
 
 #logo-linkedin {
     width: 5px;
@@ -39,9 +38,6 @@ header {
 .nav li {
 	margin-left: 3%;
 }
-
-
-
 
 h1 {
 	font-family: Helvetica Neue;
@@ -58,22 +54,11 @@ h2 {
 	font-family: Helvetica Neue;
 	font-weight: 70;
 	font-size: 30px;
-	text-align: left;
-	letter-spacing: 1pt;
-	line-height: 30px;
-	margin-top: 50px;
-	padding-bottom: 35px;
-}
-
-.text-presentation {
-	font-family: Helvetica Neue;
-	font-weight: 70;
-	font-size: 20px;
 	text-align: center;
 	letter-spacing: 1pt;
-	line-height: 24px;
-	margin-top: -10px;
-	padding-bottom: 20px;
+	line-height: 30px;
+	margin-top: 20px;
+	padding-bottom: 35px;
 }
 
 
@@ -106,6 +91,7 @@ h2 {
     display: flex;
     align-items: flex-start;
     justify-content: center;
+    padding-top: 30px;
 }
 
 
@@ -114,57 +100,25 @@ h2 {
     font-family: Helvetica Neue;
     font-weight: 100;
     letter-spacing: 0.7pt;
+    justify-content: center;
 }
 
 .texto-base {
     font-size: 17px;
     font-family: Helvetica Neue;
-	text-align: justify;
+	text-align: center;
 	line-height: 22px;
-	margin-top: -10px;
-	padding-bottom: 20px;
+	margin-top: 20px;
+	padding-bottom: 10px;
 }
 
 .filete {
     width: 20px;
     height: 4px;
-    background-color: #4035E9;
-    margin-top: 20px;
+    background-color: black;
+    margin-top: 10px;
 }
 
-.bolitas {
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-top: 60px;
-    margin-bottom: 60px;
-}
-
-.bola {
-    width: 6px;
-    height: 6px;
-    border-radius: 6px;
-    background-color: #4035E9;
-    margin-right: 4px;
-}
-
-
-.doble-columna {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-right: 140px;
-    line-height: 30px;
-}
-
-.doble-columna ul {
-    list-style: none;
-    
-}
-
-/* .columna1 {
-    width: 50%;
-} */
 
 #footer { 
 	font-family: Helvetica Neue;
@@ -173,4 +127,5 @@ h2 {
 	text-align: center;
     letter-spacing: 1pt;
     margin-bottom: 10px;
+    margin-top: 50px;
 }
