--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,15 @@
 	margin: 0px;
 	padding: 0px;
 }
+
+html {
+	scroll-behavior: smooth;
+}
+
 body{
 	font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
 }
+
 header {
 	height: 140px;
 	width: 100%;
@@ -19,21 +25,24 @@ header {
 		letter-spacing: 2pt;
 	display: flex;
 	list-style: none;
-	/* margin-right: 4.5%; */
 	align-items: center;
 	margin-right: 45px;
+	
 }
 
+.nav a:hover{
+	text-decoration: underline;
+	color: inherit;    
+ }
 .nav a{
 	text-decoration: none;
 	color: inherit;    
  }
- 
-.nav li {
-	/* margin-left: 3%; */
 
-	
-}
+
+ 
+ .nav li {
+	/* margin-left: 3%; */}
 
 #logo-linkedin {
     width: 5px;
@@ -45,13 +54,14 @@ header {
 .text-presentation {
 	font-family: Helvetica Neue;
 	font-weight: 70;
-	font-size: 25px;
+	font-size: 24px;
 	text-align: center;
 	letter-spacing: 1pt;
 	line-height: 30px;
 	margin-top: -10px;
 	background: #fafafa;
 	padding-bottom: 35px;
+	margin-bottom: 20px;
 }
 
 
@@ -85,19 +95,24 @@ header {
 	font-size: 20px;
 }
 
+.cards-container {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+}
 
-#card-article-container{
+.card-article-container{
 	display: flex;
 	flex-direction: row;
-	justify-content: space-evenly;
-	width: 100%;
-	height: 500px;
-	margin-top: 24px;
+	padding: 50px;
+	/* width: 50%; */
+	/* height: 500px; */
+	/* margin-top: 24px; */
 }
 
 .card-article { 
-	width: 670px;
-	height: 385px;
+	width: 600px;
+	height: 350px;
 	border-radius: 3px;
 	box-shadow: 0px 2px 5px #fafafa;
 	transition: all 0.17s;
@@ -125,12 +140,11 @@ header {
 	transform: scale(1.02);
 	box-shadow: 0px 5px 10px rgba(107, 107, 107, 0.35);
 	cursor: grab;
-	background:rgba(0,0,0,1);
-	opacity: 0.5;
+	/* background:rgba(0,0,0,1); */
+	/* opacity: 0.5; */
 }
 
 .card-article:hover > .article-text { 
-
 	position: absolute;
 	top: 8%;
 	left: 5%;
@@ -145,40 +159,71 @@ header {
 .blur {
 	display: none;
 	position: relative;
+	width: 600px;
+	height: 350px;
 }
 
 .color-hover {
-	opacity: 0.5;
+	/* opacity: 0.5; */
 	width: 100%;
 	height: 100%;
 	position: absolute;
 }
 
 
-
+/* 
 .color-hover:hover {
-	opacity: 0.5;
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	filter: blur( 5px);
-	
+	filter: blur(1.5rem);
+} 
+*/
+
+.card-article:hover > .article-text { 
+	position: absolute;
+	top: 5%;
+	left: 5%;
+	display: block;
+	z-index: 15;
+}
+
+.blur:hover { 
+	display: none;
+	/* width: 100%;
+	height: 100%;
+	display: block; */
+	/* filter: blur(1.5rem); */
 }
 
 .card-article:hover > .blur { 
 	width: 100%;
 	height: 100%;
 	display: block;
-
-
+	filter: blur( 5px);
+	z-index: 5;
 }
 
+.card-article-fake-background {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 10;
+}
+
+.card-article-fake-background:hover {
+	background-color: rgba(0,0,0,0.5);
+}
+
+.article-text:hover > .card-article-fake-background {
+	background-color: rgba(0,0,0,0.5);
+}
 
 #footer { 
 	font-family: Helvetica Neue;
 	font-weight: 70;
-	font-size: 15px;
+	font-size: 13px;
 	text-align: center;
-	letter-spacing: 1pt;
-	margin-bottom: 10px;
+	letter-spacing: 0.8pt;
+	margin-bottom: 20px;
 }
