--- a/css/phytool-styles.css
+++ b/css/phytool-styles.css
@@ -2,10 +2,16 @@
 	margin: 0px;
 	padding: 0px;
 }
+html {
+	scroll-behavior: smooth;
+}
+
 body{
 	font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
 }
 header {
+    position: sticky;
+    top: 0;
     height: 90px;
     width: 100%;
     background-color: #fafafa;
@@ -175,4 +181,20 @@ h2 {
 	text-align: center;
     letter-spacing: 0.8pt;
     margin-bottom: 10px;
+}
+
+#scroll-arrow {
+    /* background-image: url('../img/flecha.png');
+    background-size: cover; */
+    width: 30px;
+    height: 30px;
+    position: sticky;
+    right: 10px;
+    top: calc(100vh - 40px);
+    cursor: pointer;
+    float: right;
+}
+
+#scroll-arrow-svg {
+    width: 30px;
 }
