--- a/css/info-styles.css
+++ b/css/info-styles.css
@@ -132,6 +132,6 @@ p {
 	font-size: 13px;
 	text-align: center;
     letter-spacing: 0.8pt;
-    margin-bottom: 10px;
-    margin-top: 50px;
+    position: absolute;
+    bottom: 0;
 }
