--- a/css/phytool-styles.css
+++ b/css/phytool-styles.css
@@ -32,8 +32,9 @@ header {
 }
 
 .nav a:hover{
-	text-decoration: underline;
-	color: inherit;    
+	text-decoration: line-through;
+    color: inherit;   
+    /* text-underline-position: under;  */
  }
 
 .nav a{
@@ -111,7 +112,6 @@ h2 {
 }  
 
 
-
 .img-project {
     width: 100%;
     display: flex;
@@ -119,6 +119,11 @@ h2 {
     justify-content: center;
 }
 
+#indice {
+    width: 2px;
+    height: 2px;
+    background-color: rgb(224, 51, 51);
+}
 
 .explicacion {
     padding: 0 25%;
@@ -133,13 +138,13 @@ h2 {
 	text-align: justify;
 	line-height: 22px;
 	margin-top: -10px;
-	padding-bottom: 20px;
+	/* padding-bottom: 20px; */
 }
 
-.filete {
+#filete {
     width: 20px;
     height: 4px;
-    background-color: #4035E9;
+    background-color: rgb(255, 255, 255);
     margin-top: 20px;
 }
 
@@ -147,15 +152,15 @@ h2 {
     display:flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 60px;
+    margin-top: 100px;
     margin-bottom: 80px;
 }
 
 .bola {
-    width: 6px;
-    height: 6px;
-    border-radius: 6px;
-    background-color: #4035E9;
+    width: 4px;
+    height: 4px;
+    border-radius: 4px;
+    background-color: rgb(0, 0, 0);
     margin-right: 4px;
 }
 
@@ -166,11 +171,25 @@ h2 {
     justify-content: space-between;
     padding-right: 140px;
     line-height: 30px;
+   
 }
+
 
 .doble-columna ul {
     list-style: none;
-    
+    text-decoration: underline;
+    color: inherit;
+    text-underline-position: under;
+}
+
+.doble-columna a:hover{
+	text-decoration: underline;
+	color: inherit;    
+ }
+
+.doble-columna a{
+   text-decoration: none;
+   color: inherit;    
 }
 
 
@@ -181,6 +200,7 @@ h2 {
 	text-align: center;
     letter-spacing: 0.8pt;
     margin-bottom: 10px;
+    
 }
 
 #scroll-arrow {
@@ -189,10 +209,11 @@ h2 {
     width: 30px;
     height: 30px;
     position: sticky;
-    right: 10px;
+    right: 20px;
     top: calc(100vh - 40px);
     cursor: pointer;
     float: right;
+    
 }
 
 #scroll-arrow-svg {
