cambios-listo-presentacion

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@ html {
 
 body{
 	font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
+	position: relative;
+	min-height: 100vh;
 }
 
 header {
@@ -100,6 +102,7 @@ header {
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
+	padding-bottom: 30px;
 }
 
 .card-article-container{
@@ -211,11 +214,7 @@ header {
 	z-index: 10;
 }
 
-.card-article-fake-background:hover {
-	background-color: rgba(0,0,0,0.5);
-}
-
-.article-text:hover > .card-article-fake-background {
+.card-article:hover .card-article-fake-background {
 	background-color: rgba(0,0,0,0.5);
 }
 
@@ -225,12 +224,13 @@ footer {
 	font-weight: 70;
 	font-size: 13px;
 	letter-spacing: 0.8pt;
-	padding-bottom: 5px;
 	display: flex;
 	justify-content: center;
 	align-self: flex-end;
 	position: absolute;
-	bottom: 0;}
+	padding-bottom: 15px;
+	bottom: 0;
+}
 
 .footer-text {
 	margin: 0 auto;
