--- a/css/phytool-styles.css
+++ b/css/phytool-styles.css
@@ -124,7 +124,7 @@ h2 {
 #indice {
     width: 2px;
     height: 2px;
-    background-color: rgb(224, 51, 51);
+    background-color: rgb(255, 255, 255);
 }
 
 .explicacion {
@@ -226,23 +226,21 @@ h2 {
     display: none;
 }
 
-#user-journey2 {
+.image-1 {
+    z-index: 1;
+}
+.image-2 {
     z-index: 2;
 }
 
-#user-journey {
-    z-index: 1;
-}
-
-#button-left {
+.button-left {
     position: absolute;
     left: 50px;
     width: 50px;
     top: 50%;
     z-index: 5;
 }
-
-#button-right {
+.button-right {
     position: absolute;
     right: 50px;
     width: 50px;
