--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@ header {
 	width: 600px;
 	height: 350px;
 	border-radius: 3px;
-	box-shadow: 0px 2px 5px #fafafa;
+	/* box-shadow: 0px 2px 5px #fafafa; */
 	transition: all 0.17s;
 	background-image: url('../img/phytool.png');
 	background-size: cover;
@@ -142,7 +142,7 @@ header {
 .card-article:hover { 
 	transition: all 0.17s;
 	transform: scale(1.02);
-	box-shadow: 0px 5px 10px rgba(107, 107, 107, 0.35);
+	/* box-shadow: 0px 5px 10px rgba(107, 107, 107, 0.35); */
 	cursor: grab;
 }
 
